--- a/wx2048/build.xml
+++ b/wx2048/build.xml
@@ -148,6 +148,8 @@
                 <file name="src/grid.js"/>
                 <file name="src/tile.js"/>
                 <file name="src/config.js"/>
+                <file name="src/gameover.js"/>
+                <file name="src/share.js"/>
                 <file name="main.js"/>
 
             </sources>
