--- a/wx2048/build.xml
+++ b/wx2048/build.xml
@@ -150,6 +150,9 @@
                 <file name="src/config.js"/>
                 <file name="src/gameover.js"/>
                 <file name="src/share.js"/>
+                <file name="src/guide.js"/>
+                <file name="src/weixin/WeixinApi.js"/>
+                <file name="src/weixin/weixindata.js"/>
                 <file name="main.js"/>
 
             </sources>
