wx2048: update to jd-app lasted version.

--- a/wx2048/build.xml
+++ b/wx2048/build.xml
@@ -101,6 +101,8 @@
                 <file name="src/gameover.js"/>
                 <file name="src/share.js"/>
                 <file name="src/guide.js"/>
+                <file name="weixin/WeixinApi.js"/>
+                <file name="weixin/weixindata.js"/>
                 <file name="main.js"/>
 
             </sources>
