--- a/pictoword/build.xml
+++ b/pictoword/build.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0"?>
-<project name="Javascript compress project" basedir="D:\repos\revival\html5\pictoword" default="compile">
+<project name="Javascript compress project" basedir="C:\Users\Administrator\.ssh\revival\html5\pictoword" default="compile">
 
     <taskdef name="jscomp" classname="com.google.javascript.jscomp.ant.CompileTask"
-             classpath="D:\cocos2d\cocos2d-js-v3.0-rc3\tools\cocos2d-console\bin\..\plugins\project_compile\build_web/bin/compiler-1.7.jar"/>
+             classpath="f:\cocos2d\cocos2d-js-v3.0-rc3\tools\cocos2d-console\bin\..\plugins\project_compile\build_web/bin/compiler-1.7.jar"/>
 
     <target name="compile">
         <jscomp compilationLevel="advanced" 
                 warning="quiet"
                 debug="false" 
-                output="D:\repos\revival\html5\pictoword\publish\html5/game.min.js"
+                output="C:\Users\Administrator\.ssh\revival\html5\pictoword\publish\html5/game.min.js"
                 languagein="ECMASCRIPT5"
                 
                 >
-            <sources dir="D:\repos\revival\html5\pictoword\frameworks\cocos2d-html5">
+            <sources dir="C:\Users\Administrator\.ssh\revival\html5\pictoword\frameworks\cocos2d-html5">
                 <file name="CCBoot.js"/>
                 <file name="CCDebugger.js"/>
                 <file name="cocos2d/core/utils/BinaryLoader.js"/>
@@ -88,6 +88,34 @@
                 <file name="cocos2d/menus/CCMenuItem.js"/>
                 <file name="cocos2d/menus/CCMenu.js"/>
                 <file name="cocos2d/audio/CCAudio.js"/>
+                <file name="cocos2d/text-input/CCIMEDispatcher.js"/>
+                <file name="cocos2d/text-input/CCTextFieldTTF.js"/>
+                <file name="cocos2d/shape-nodes/CCDrawNode.js"/>
+                <file name="cocos2d/clipping-nodes/CCClippingNode.js"/>
+                <file name="extensions/ccui/base-classes/CCProtectedNode.js"/>
+                <file name="extensions/ccui/system/CocosGUI.js"/>
+                <file name="extensions/ccui/base-classes/UIWidget.js"/>
+                <file name="extensions/ccui/base-classes/UIScale9Sprite.js"/>
+                <file name="extensions/ccui/layouts/UILayout.js"/>
+                <file name="extensions/ccui/layouts/UILayoutParameter.js"/>
+                <file name="extensions/ccui/layouts/UILayoutManager.js"/>
+                <file name="extensions/ccui/layouts/UIHBox.js"/>
+                <file name="extensions/ccui/layouts/UIRelativeBox.js"/>
+                <file name="extensions/ccui/layouts/UIVBox.js"/>
+                <file name="extensions/ccui/system/UIHelper.js"/>
+                <file name="extensions/ccui/uiwidgets/UIButton.js"/>
+                <file name="extensions/ccui/uiwidgets/UICheckBox.js"/>
+                <file name="extensions/ccui/uiwidgets/UIImageView.js"/>
+                <file name="extensions/ccui/uiwidgets/UILoadingBar.js"/>
+                <file name="extensions/ccui/uiwidgets/UISlider.js"/>
+                <file name="extensions/ccui/uiwidgets/UIText.js"/>
+                <file name="extensions/ccui/uiwidgets/UITextAtlas.js"/>
+                <file name="extensions/ccui/uiwidgets/UITextBMFont.js"/>
+                <file name="extensions/ccui/uiwidgets/UITextField.js"/>
+                <file name="extensions/ccui/uiwidgets/UIRichText.js"/>
+                <file name="extensions/ccui/uiwidgets/scroll-widget/UIScrollView.js"/>
+                <file name="extensions/ccui/uiwidgets/scroll-widget/UIListView.js"/>
+                <file name="extensions/ccui/uiwidgets/scroll-widget/UIPageView.js"/>
 
             </sources>
             <sources dir="${basedir}">
